2006-01-05  Roger While <simrw@sim-basis.de>

	* Bootstrap up to libtool 1.5.22 / automake 1.9.6
	  configure.ac : Changes for AIX/HP/Sun
			 Default to using system dynamic loading
			 Pass COB_LDFLAGS from LDFLAGS

2006-01-03  Roger While <simrw@sim-basis.de>

	* configure.ac : Pass CFLAGS into COB_CFLAGS
	    Default to using system dynamic loading

2005-12-31  Roger While <simrw@sim-basis.de>

	* Remove COBCRUN SHARE variable

2005-12-30  Roger While <simrw@sim-basis.de>

	* configure.ac : Check timezone/gettimeofday

2005-12-21  Roger While <simrw@sim-basis.de>

	* configure.ac : WITH_VARSEQ - Define the format of
	  variable length sequential files

2005-12-13  Roger While <simrw@sim-basis.de>

	* cpucheck.c : Revert to i686 with -mcpu/tune=

2005-12-08  Roger While <simrw@sim-basis.de>

	* configure.ac : Compile cpucheck with COB_CC.
	  Pass extra compile options as own define.
	  Put in a hack to stop CXX/F77 checking -
	  Anybody know a better way ?

2005-12-05  Roger While <simrw@sim-basis.de>

	* configure.ac : Pass down EXEEXT

2005-11-25  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix typos, cater for DB 4.4 and 4.5
			 Check for signal.h and sys/types.h
			 Clean up getopt

2005-11-06  Roger While <simrw@sim-basis.de>

	* configure.ac : minor help text cleanup

2005-11-04  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix COB_CC not equal CC

2005-11-01  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix missing EGREP
	  Check for various libdb's individually as libdb may
	  not be linked to newer version (or at all - Cygwin)
	  Check for ncurses.h in include/ncurses/ncurses.h

2005-10-31  Roger While <simrw@sim-basis.de>

	* configure.ac : Pick up -Wno-pointer-sign
	  and the visibility attribute

2005-10-28  Roger While <simrw@sim-basis.de>

	* configure.ac : Propagate endian value

2005-10-27  Roger While <simrw@sim-basis.de>

	* configure.ac : MAC (Darwin) has different options when creating a