@@ -1,3 +1,8 @@
+2006-01-17  Roger While <simrw@sim-basis.de>
+
+	* cobc.c : Don't warn -x/-m when using -E
+	  field.c : Don't allow binary fields > 18 digits
+
 2006-01-08  Roger While <simrw@sim-basis.de>
 
 	* tree.c, field.c, typeck.c : Preliminary support for numeric
