@@ -1,3 +1,8 @@
+2006-01-17  Roger While <simrw@sim-basis.de>
+
+	* configure.ac : Minor fixes
+	  README : Put in a comment regrding spaces in path names
+
 2006-01-05  Roger While <simrw@sim-basis.de>
 
 	* Bootstrap up to libtool 1.5.22 / automake 1.9.6
